--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap4": "~2.0.8",
-        "almasaeed2010/adminlte": "^3.0.2"
+        "almasaeed2010/adminlte": "*"
     },
     "suggest": {
         "cebe/yii2-gravatar": "Display user icons",
