--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
-    "name": "dmstr/yii2-adminlte-asset",
+    "name": "olissongs/yii2-adminlte-asset",
     "description": "AdminLTE backend theme asset bundle for Yii 2.0 Framework",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","adminlte","admin","theme","backend","asset","css","less"],
     "license": "BSD-3-Clause",
     "authors": [
+        {
+            "name": "Oliver Strixner",
+            "email": "info@it-strixner.de"
+        },
         {
             "name": "Tobias Munk",
             "email": "tobias@diemeisterei.de"
