--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "olissongs/yii2-adminlte-asset",
-    "description": "AdminLTE backend theme asset bundle for Yii 2.0 Framework",
+    "description": "TEST ONLY dminLTE backend theme asset bundle for Yii 2.0 Framework",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","adminlte","admin","theme","backend","asset","css","less"],
     "license": "BSD-3-Clause",
@@ -34,8 +34,8 @@
     },
     "repositories": [
         {
-            "type": "composer",
-            "url": "https://asset-packagist.org"
+            "type": "vcs",
+            "url": "https://github.com/olissongs/yii2-adminlte-asset.git"
         }
     ],
     "extra": {
